<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/ingredients"
        android:title="@string/ingredients"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_ingredients_white_24dp"
        />

</menu>