...
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp">
            <com.google.android.exoplayer2.ui.PlayerView
                android:id="@+id/simple_player_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:show_timeout="0"
                app:hide_on_touch="false"
                app:use_artwork="false"
                app:resize_mode="fixed_width"
...
